--- a/課堂練習.Rmd
+++ b/課堂練習.Rmd
@@ -8,8 +8,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 
 library(reticulate)
-use_python("/Users/martin/anaconda3/envs/m-team/bin/python",
+use_python("C:/Users/yofun/ANACON~1/envs/myEnvironment",
            required = T)
-use_condaenv("m-team", required = T)
+use_condaenv("myEnvironment", required = T)
 ```
 
