--- a/20190919.Rmd
+++ b/20190919.Rmd
@@ -28,9 +28,10 @@ conda_install("myEnvironment", # 沙盒環境名稱
 ```
 
 ```{python}
-string = "你好"
-string2 = '我很好' # 用單引號也可以
+string = "hello"
+string2 = "i'm fine" # 'is ok
 type(string)
+len(string2)
 numInteger = 3
 type(numInteger)
 #len(numInteger)
@@ -38,6 +39,14 @@ numFloat = 3.
 type(numFloat)
 #len(numFloat)
 ```
+
+```{python}
+logiT=True
+type(logiT)
+logiF=False
+type(logiF)
+```
+
 ```{python}
 listA=[1,2,True]
 listA
@@ -45,8 +54,38 @@ type(listA)
 listB=[1,["a","b"],True] # nested list
 listB
 type(listB)
-len(listA)
+len(listB)
+
+tupleC=(1,["a","b"],True)
+type(tupleC)
+print(tupleC)
 ```
+
+```{python}
+listA
+a,b,c=listA # unpacking to three objects
+type(a); type(b); type(c) # ;可併行
+
+tupleD=(a,b,c) # packing to a tuple
+type(tupleD)
+
+listD= [a,b,c] # packing to a list
+type(listD)
+```
+
+```{python}
+print(listA)
+
+a,*b = listA
+a; type(a)
+b; type(b)
+
+*a, b = listA
+a; type(a)
+b; type(b)
+```
+
+
 ```{python}
 list3 = [1, 2, ("class", "a", [1, 2, 3]), {4, True} ]
 len(list3)
@@ -60,7 +99,7 @@ b; type(b)
 ```
 
 ```{python}
-gradeTuple = ("fanny", 88, 72, 58, "men, girl")
+gradeTuple = ("fanny", 88, 72, 58,  "men, girl")
 name, *grade, gender = gradeTuple
 
 name 
@@ -86,6 +125,12 @@ setH={1,"b",(1,4,[5,8])}
 
 ```
 
+```{python}
+set2 = {2, "a", "a", 2}
+print(set2)
+```
+
+
 
 ```{python}
 listY=[1,1,3,0,1,0,2]
@@ -100,15 +145,30 @@ listY2
 
 ```{python}
 listA
-listA[0] # 0開始
+listA[0] # 0 start
 listA[1]
 listA[2]
 listA[3]
 ```
 
 ```{python}
+tupleC
+tupleC[0] # 0 start
+tupleC[1]
+tupleC[2]
+tupleC[3] # no 3
+```
+
+```{python}
+setE
+setE[0]
+```
+
+
+
+```{python}
 listA = [('Mary','John'),('A2838','C8898'),(89,73)]
-len(listA) # number od elements
+len(listA) # number of elements
 listA[0] # take the first element
 listA[0][1] # take the first element and then take the second element
 
@@ -142,10 +202,14 @@ listA
 listA[-2:5:-1] #from last two
 listA[-2:-6:-1]
 listA[-5:-1:1]
-listA[-5:] 
+listA[-5:]
+listA[1:]
+listA[:-1]
+[listA[0],listA[2]]
 ```
 
 ```{python}
+listA
 list( listA[index] for index in [0, 2, 7] )
 ```
 
