--- a/20190926.Rmd
+++ b/20190926.Rmd
@@ -27,6 +27,8 @@ conda_install("myEnvironment", # 沙盒環境名稱
 ```{python}
 dictionaryA ={"name": "Mary", "id": "A28374", "grade": 77}
 dictionaryA
+
+{key: dictionaryA[key] for key in ['name','grade']} # dictionary comprehension
 ```
 
 ```{python}
@@ -50,6 +52,8 @@ sparseMatrix = {
 (2, 1): 7, 
 (3, 3): -5}
 print(sparseMatrix)
+
+sparseMatrix[(1, 1)]
 ```
 
 ```{python}
@@ -73,18 +77,18 @@ grade = {
 grade = {
 "id": [172, 214, 322, 425, 517],
 "name": ["a","b","c","d","e"],
-"grades": [80,60,90,70,50]
+"scores": [80,60,90,70,50]
 }
 ```
 
 ```{python}
-grade["grades"]
+grade["scores"]
 ```
 
 ```{python}
 grade["name"][0]
-grade["grades"][0]
-{grade["name"][0]: grade["grades"][0]}
+grade["scores"][0]
+{grade["name"][0]: grade["scores"][0]}
 ```
 ```{python}
 {
@@ -102,6 +106,24 @@ sparseMatrix = {
 (3, 3): -5}
 print(sparseMatrix)
 ```
+
+```{python}
+dictionaryA={
+"name": "amy",
+"age": 33
+}
+dictionaryA["name"]="amyy"
+dictionaryA
+```
+
+```{python}
+listA=[2,7,5,-2,13]
+listA[0] = 0
+listA[1] = ("a", "b")
+listA
+```
+
+
 
 ```{python}
 originalList=[1,2,"a"]
@@ -125,6 +147,38 @@ print(definitionCopy)
 print(originalList)
 ```
 
+切割式複製則不會完全相依。
+```{python}
+originalList=[1,2,"a"]
+sliceCopy=originalList[:] # slice copy
+print(sliceCopy)
+print(originalList)
+
+sliceCopy[1]="b"
+print(sliceCopy)
+print(originalList)
+
+originalList[1]="f"
+print(sliceCopy)
+print(originalList)
+```
+
+```{python}
+originalList=[1,2,10]
+listA=originalList+[5,7] # concatenate
+listB=originalList*2 # duplicate
+
+print(originalList)
+print(listA)
+print(listB)
+
+originalList[0]=0
+print(originalList)
+print(listA)
+print(listB)
+```
+
+
 ```{python}
 treeA=[1,2,3,[4,5],[6,7]]
 
@@ -138,8 +192,30 @@ stringA="Hello"
 stringA.upper()
 stringA # no change (immutable)
 ```
+
+```{python}
+nestedList=[1,2,[3,4,[5,6]],[7,8]]
+copy1=nestedList[:]
+print(nestedList)
+
+# 
+nestedList[1]="d"
+print(nestedList)
+print(copy1)
+
+# 
+nestedList[3][1]="leave"
+print(nestedList)
+print(copy1)
+```
+
+
 ```{python}
 3>4
+a=3
+b=4
+c=5
+a; b; c
 ```
 ```{python}
 numList=[3,2,11,43]
@@ -160,21 +236,44 @@ len(b) #
 ```{python}
 x = "Hello " + "World"
 x
+y = "wow..."*3
+y
+x
+x[0:5]
 ```
+
+```{python}
+listB=["A","B","C"]
+listC=[1.,2.,3.]
+listB+listC
+listB*3
+```
+
 
 ```{python}
 x=[1,2,3]
 y=[1,2,3]
 z=[1,2]
-x==y
+x==y #yes
 x==z
 x is x 
-x is y
+x is y #no
 ```
 ```{python}
 5 in [1,5,3]
 [5] in [1,5,3]
+
+5 in [[1],[5],[3]]
+[5] in [[1],[5],[3]]
 ```
+
+```{python}
+x = set([1, 2, 3, 1, 3, 5]) 
+x
+# {1, 2, 3, 5}  
+3 in x
+```
+
 
 ```{python}
 listF=[2,5,10,11,-1,7]
@@ -185,6 +284,8 @@ listG=[4,7,-2,10,11,15]
 ```{python}
 listC=[2,3,4]
 [str(listC[i]) for i in [0, 1, 2]]
+
+str(2)
 ```
 
 ```{python}
@@ -197,12 +298,11 @@ list2iter=["a",2,"c"]
 ```
 
 ```{python}
-"{0}'s {1} score is {2}".format("Amy", "Econ", 50)  
-"{}'s {} score is {}".format("Amy", "Econ", 50) 
-"{1}'s {0} score is {2}".format("Econ","Amy", 50)   
+"{0}'s {1} scores is {2}".format("Amy", "Econ", 50)  
+"{}'s {} scores is {}".format("Amy", "Econ", 50) 
+"{1}'s {0} scores is {2}".format("Econ","Amy", 50)   
 
 
-"{name}'s {subject} score is {grade}".format(
+"{name}'s {subject} scores is {grade}".format(
   name="Amy",grade=50,subject="Econ") 
 ```
-
