--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -25,8 +25,8 @@ params:
 knitr::opts_chunk$set(echo = TRUE, eval=F)
 
 library(reticulate)
-use_python("/anaconda3/envs/m-team/bin/python",required = T)
-use_condaenv("m-team", required = T)
+use_python("C:/Users/yofun/ANACON~1/envs/myEnvironment",required = T)
+use_condaenv("myEnvironment", required = T)
 ```
 
 ## 作答需知
@@ -52,30 +52,38 @@ x
 ### 1.1 class轉換
 取出x的第一個元素並將它轉成字串存在答案物件`x0_str`.
 ```{python ans11}
-# x0_str
+x0_str = x[0]
+x0_str
 ```
 
 ### 1.2 list comprehension
 將x由整數list轉成每個元素值皆為字串的字串list，存在答案物件`x_str`。（必需用到list comprehension）
 ```{python ans12}
-# x_str
+x_str = [str(x[i]) for i in [0,1,2,3,4,5,6,7,8,9,10,11]]
+x_str
 ```
 
 ### 1.3 邏輯判斷
 取出x的第七個元素，判斷它是否小於50（小於為True）存在答案物件`x6_logi`
 ```{python ans13}
-# x6_logi
+x6_logi = x[6]<50
+x6_logi
 ```
 
 ### 1.4 邏輯判斷+list comprehension
 產生`x_logi`邏輯判斷list，原個元素為x對應元素是否小於50的邏輯判斷結果（小於為True)
 ```{python ans14}
-# x_logi
+x_logi = [x[i]<50 for i in [0,1,2,3,4,5,6,7,8,9,10,11]]
+x_logi
 ```
 
 ### 1.5 邏輯運算
 計算x_logi中False的個數，存在答案物件`num_false`。 （
 ```{python ans15}
+listA = []
+for i in range(len(x)):
+ if x[i]>50:
+  listA = listA.append(i)
 # num_false
 ```
 
@@ -91,13 +99,19 @@ dict_business=df_business.to_dict()
 有多少公司的'公司所在地'在'桃園市'，請將數字存在`num_taoyuan`。
 
 ```{python ans21}
+listB = list(dict_business['公司所在地'])
+listB.count('桃園市')
 # num_taoyuan
 ```
 
 ### 2.2
 有多少公司的'資本額'大於500000，請將數字存在`num_largeCapital`。
 ```{python ans22}
-# num_largeCapital
+listC = [dict_business["資本額"][i]  
+  for i in range(len(dict_business["資本額"] )) 
+  if dict_business["資本額"][i] > 500000]
+num_largeCapital = len(listC)
+num_largeCapital
 ```
 
 ## 3
@@ -111,12 +125,14 @@ danceInfo=response.json()
 ### 3.1
 danceInfo的每個元素是一場表演的訊息，請找出它有多少場舞蹈表演，存在numDance的class int物件裡
 ```{python ans31}
-# numDance
+numDance = len(danceInfo) #???
+numDance
 ```
 
 ### 3.2
 第1場的表演名稱'title'是什麼？請存在名為title1的物件裡。
 ```{python ans32}
+danceInfo['title']
 # title1
 ```
 
