--- a/20191017.Rmd
+++ b/20191017.Rmd
@@ -121,3 +121,56 @@ for i in range(len(listA)):
 ```
 
 4.1.1
+
+$$i=0,\\sum_j M_{0j}$$
+
+```{python}
+M=dict_example['matrix']
+M
+```
+```{python}
+dict_example = {
+    'list': [1, 3, -7, 4, 9, -5, 4],
+    'dict': {
+        "date": [2001,2002,2003],
+        "price": [21000,33000,45880]
+        },
+    'matrix': [
+        [2,5,4],
+        [2,-1,3]]
+}
+
+
+print("list")
+x=dict_example["list"]
+x
+[i for i in x]
+[i for i in range(len(x))]
+[i for i in enumerate(x)] # produce tuple iterates
+```
+
+```{python}
+print("dict")
+x=dict_example["dict"]
+x
+[i for i in x] # key sequence
+[i for i in range(len(x))] # index sequence
+[i for i in enumerate(x)] # (index, key) tuple sequence
+[i for i in x.items()] # (key, value) tuple sequence
+```
+
+```{python}
+import random
+a=[random.randint(0,100) for i in range(0,12)]
+```
+
+```{python}
+a=10
+a=a+5 # 
+print(a)
+
+a=10
+a+=5 # 
+print(a)
+```
+
