--- a/20191003.Rmd
+++ b/20191003.Rmd
@@ -117,6 +117,201 @@ def test(input1, input2=0):
 test(1,1) 
 test(input1=1,input2=1)
 
-test(1) # 動用到預設值
+test(1) # 
 ```
 
+## pack to tuple
+
+```{python}
+def test2(input1,*input3):
+  print('input1 is ', input1)
+  print('input3 is ', input3)
+  return None
+ 
+test2(1,1.2,4,5)
+test2(1,[1.2,4],5)
+test2(["1","b"],{2,5,7},10)
+```
+
+```{python}
+def test3(input1,**input4):
+  print('input1 is ', input1)
+  print('input4 is ', input4)
+  return None
+ 
+test3(1,a=10,b={2,3})
+```
+
+
+```{python}
+input1, *input3=(1, 1.2, 4, 5)
+input1, *input3=(1,[1.2,4],5)
+input1, *input3=(["1","b"],{2,5,7},10)
+```
+
+```{python}
+x, *seq, y=(1,2,3,4,5)
+```
+
+```{python}
+def f(x, *seq, y):
+    print("x is: ", x)
+    print("seq is: ", seq)
+    print("y is: ", y)
+    return None
+f(1, 2, 3, 4, 5) #why?
+f(1, 2, 3, 4, y=5)
+```
+
+```{python}
+def f(a,b,c):
+   return a+b+c
+
+
+f(1,3,4)
+f(*[1,3],4)
+f(1,*[3,4])
+f(*[1,3,4])
+```
+
+
+```{python}
+a, b, c=(1,3,4)
+a, b, c=(*[1,3],4)
+a, b, c=(1,*[3,4])
+a, b, c=(*[1,3,4])
+```
+
+```{python}
+from math import *
+
+def normal_pdf(z,mu,sigma):
+  return 1/(sqrt(2*pi*sigma**2))*exp(-(z-mu)**2/(2*sigma**2))
+
+normal_pdf(0.8,0,1)
+```
+
+
+```{python}
+def utility_cobb_douglass(x,y,alpha=1,beta=3):
+  
+  utilValue = x**alpha*y**beta # 程序產生output值
+  
+  return utilValue # 傳回output值
+
+utility_cobb_douglass(1,1,0.5,0.5)
+utility_cobb_douglass(1,1)
+
+```
+
+```{python}
+x, y, **parameters  =(1,1,alpha=0.5,beta=0.5)
+```
+
+```{python}
+parameters={
+"alpha": 0.5,
+"beta": 0.5
+}
+```
+
+
+
+```{python}
+x, y, **parameters  =(1,1,alpha=0.5,beta=0.5)
+parameters={
+"alpha": 0.5,
+"beta": 0.5
+}
+def utility_cobb_douglas(x, y, **parameters):
+  alpha=parameters["alpha"]
+  beta=parameters["beta"]
+  utilValue = x**alpha*y**beta 
+  return utilValue # 傳回output值
+```
+
+# local global environment
+
+```{python}
+obj2
+obj3
+::
+::
+# call objX=utility_cobb_douglass(1,1,alpha=0.5,beta=0.5)
+  x,y,alpha,beta=(1,1,0.5,0.5)
+  utilValue = x**alpha*y**beta 
+  return utilValue
+```
+
+```{python}
+global1=[1,3,[4,5]]
+def funtest(x):
+  x[0]="a"
+  y=x[:]
+  y[1]="b"
+  y[2][1]="c"
+  return None
+global1
+funtest(global1) #call
+global1
+```
+
+# executive environment of funtest(global1)
+```{python}
+global1=[1,3,[4,5]]
+global1
+# enter executive environment
+x=global1
+x[0]="a"
+y=x[:]
+y[1]="b"
+y[2][1]="c"
+# kill executive environment objects
+del x, y
+global1
+```
+
+
+```{python}
+global1=[1,3,[4,5]]
+def funtest(x):
+  x[0]="a"
+  y=x[:]
+  y[1]="b"
+  y[2][1]="c"
+  return None
+global1
+funtest(global1)
+global1
+```
+
+
+```{python}
+def utility_cobb_douglass(x,y,alpha=1,beta=3):
+  
+  utilValue = x**alpha*y**beta*obj3 # 程序產生output值
+  
+  return utilValue # 傳回output值
+utility_cobb_douglass(1,1,0.5,0.5)
+utility_cobb_douglass(1,1)
+```
+
+
+
+```{python}
+global1=[1,3,[4,5]]
+funtest(global1.copy())
+global1
+import copy 
+global1=[1,3,[4,5]]
+funtest(copy.deepcopy(global1))
+global1
+```
+
+
+```{python}
+def test(x,y):
+  return x+y+obj3
+obj3=5
+test(1,4)
+```
