--- a/20191017.Rmd
+++ b/20191017.Rmd
@@ -2,6 +2,8 @@
 title: "課堂練習"
 date: "9/12/2019"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -128,12 +130,13 @@ $$i=0,\\sum_j M_{0j}$$
 M=dict_example['matrix']
 M
 ```
+
 ```{python}
 dict_example = {
     'list': [1, 3, -7, 4, 9, -5, 4],
     'dict': {
-        "date": [2001,2002,2003],
-        "price": [21000,33000,45880]
+        "日期": [2001,2002,2003],
+        "金額": [21000,33000,45880]
         },
     'matrix': [
         [2,5,4],
@@ -146,8 +149,9 @@ x=dict_example["list"]
 x
 [i for i in x]
 [i for i in range(len(x))]
-[i for i in enumerate(x)] # produce tuple iterates
+[i for i in enumerate(x)] # 產生tuple iterates
 ```
+
 
 ```{python}
 print("dict")
@@ -172,5 +176,37 @@ print(a)
 a=10
 a+=5 # 
 print(a)
+```
+
+```{python}
+import numpy as np
+```
+
+
+```{python}
+dict_rect=dict({})
+dict_rect.update({
+  'list': [[15,9,7],
+           [-5,4,-10],
+           [0,0,5],
+           [-52,3,1]] # 4 by 3
+})
+matrix_list=dict_rect['list']
+dict_rect.update({
+  'array': np.array(matrix_list)
+})
+```
+
+```{python}
+dict_rect['list']
+np0=dict_rect['array']
+np0
+np0.shape
+```
+
+```{python}
+np0
+np0[0:2] # 1、2 rows不包含row 3 (即：之後的數字)； 取所有cols
+np0[0:2,1:] # 1、2 rows；2、3 cols
 ```
 
